2012-06-21  Nico Weber  <thakis@chromium.org>

        Remove two more member variables found by clang's Wunused-private-field
        https://bugs.webkit.org/show_bug.cgi?id=89672

        Reviewed by Anders Carlsson.

        * html/shadow/MediaControlRootElementChromium.h:
        (MediaControlRootElementChromium):
        * platform/graphics/filters/FECustomFilter.cpp:
        (WebCore::FECustomFilter::FECustomFilter):
        * platform/graphics/filters/FECustomFilter.h:
        (FECustomFilter):

2012-06-21  Julien Chaffraix  <jchaffraix@webkit.org>

        Non-fixed length margins don't work with align=center
        https://bugs.webkit.org/show_bug.cgi?id=89626

        Reviewed by Levi Weintraub.

        Tests: fast/block/negative-start-margin-align-center-percent.html
               fast/block/positive-margin-block-child-align-center-calc.html

        Calling Length::value() is a bad idea as it returns the *raw* value of
        the length. For percent and calculated length this is a bad idea as they
        bear not relation to the actual computed length.

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::computeInlineDirectionMargins):
        Fixed the code to use minimumValueForLength as this nicely takes care of the 'auto' case.

2012-06-21  Robert Kroeger  <rjkroege@chromium.org>

        [chromium] style improvement for setDeviceScaleFactor code
        https://bugs.webkit.org/show_bug.cgi?id=89665

        Correct a coding style error committed in https://bugs.webkit.org/show_bug.cgi?id=88916

        Reviewed by Adrienne Walker.

        Purely code hygiene: existing tests suffice.

        * platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
        (WebCore::CCLayerTreeHostImpl::setDeviceScaleFactor):

2012-06-21  Shinya Kawanaka  <shinyak@chromium.org>

        [Crash][Editing] Pressing enter on LI element triggers assertion in Shadow DOM.
        https://bugs.webkit.org/show_bug.cgi?id=89171
